k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phishing-sim
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts: ['sim.empresa.cl'] # DEBE coincidir con APP_BASE_URL
      secretName: phishing-sim-tls
  rules:
    - host: sim.empresa.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phishing-sim
                port: { number: 80 }
